Update login component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
             <label for="floatingPassword">Password</label>
           </div>
           <div class="inputBx">
-            <input class="" type="submit" (click)="login()" />Sign in>
+            <input class="" type="submit" (click)="login()" value="Sign in" />
           </div>
         </form>
       </div>
