--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,6 +29,9 @@
           <div class="inputBx">
             <input class="" type="submit" (click)="login()" value="Sign in" />
           </div>
+          <div class="inputBx">
+            <p>Don't have an account? <a [routerLink] = "['/register']">Sign up</a></p>
+          </div>
         </form>
       </div>
     </div>
