Add mapss component

--- a/src/app/components/places/places.component.html
+++ b/src/app/components/places/places.component.html
@@ -1,5 +1,9 @@
 <body>
   <section>
+    <div class="map">
+      <app-mapss></app-mapss>
+    </div>
+    
     <div class="placesblur"></div>
     <div class="places">
       <div class="profile-nav">
