--- a/src/app/components/places/places.component.css
+++ b/src/app/components/places/places.component.css
@@ -1,25 +1,31 @@
 section{
   width: 100%;
     height: 100vh;
-    background-image: url('../../../assets/background.png');
+}
+.map{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
 }
 .places {
     position: absolute;
     right: 10px; 
     height: 100vh;  
     width: 410px;
+    
   }
   .placesblur {
     position: absolute;
     right: 10px; 
     height: 100vh;  
     width: 410px;
-    background: rgba( 255, 255, 255, 0.35 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 6.0px );
-    -webkit-backdrop-filter: blur( 6.0px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    background: rgba( 255, 255, 255, 0.60 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 12.5px );
+-webkit-backdrop-filter: blur( 12.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+    
   }
   .profile-nav {
     width: 410px;
